# lagswitch

./: README.md  pyproject.toml  setup.py
lagswitch/: __init__.py  main.py
