[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lagswtich"
version = "0.1.0"
description = "Application-specific network rate limiting tool"
authors = [
    {name = "User", email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psutil>=5.9.0",
]

[project.scripts]
lagswtich = "lagswtich.main:main"

[tool.setuptools.packages.find]
include = ["lagswtich*"]

[tool.setuptools.package-data]
lagswtich = ["py.typed"]